src/tests/snapshots/cargo_vet__tests__trusted__trusted_delta_audit_wrong_user_id_locked.snap
---
source: src/tests/trusted.rs
expression: human
---
Vetting Failed!

1 unvetted dependencies:
  transitive-third-party1:10.0.0 missing ["safe-to-deploy"]

recommended audits for safe-to-deploy:
    Command                                          Publisher  Used By       Audit Size
    cargo vet inspect transitive-third-party1 5.0.0  UNKNOWN    third-party1  25 lines

estimated audit backlog: 25 lines

Use |cargo vet certify| to record the audits.

