src/tests/snapshots/cargo_vet__tests__trusted__trusted_full_audit_locked.json.snap
---
source: src/tests/trusted.rs
expression: json
---
{
  "conclusion": "success",
  "vetted_fully": [
    {
      "name": "third-party1",
      "version": "10.0.0"
    },
    {
      "name": "third-party2",
      "version": "10.0.0"
    },
    {
      "name": "transitive-third-party1",
      "version": "10.0.0"
    }
  ],
  "vetted_partially": [],
  "vetted_with_exemptions": []
}
